--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,110 @@
-pip install flask
-pip install SQLAlchemy
-pip install Flask-SQLAlchemy
+attrs==22.2.0
+big-O-calculator==0.0.9.8.4
+bleach==5.0.1
+bokeh==2.4.3
+cachelib==0.9.0
+cachetools==5.3.0
+cassidy==0.1.4
+certifi==2022.9.14
+cffi==1.15.1
+chardet==5.1.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.5
+crayons==0.4.0
+cryptography==39.0.0
+decorator==4.4.2
+Deprecated==1.2.13
+enumb==0.1.5
+exceptiongroup==1.1.0
+expo==0.1.2
+firebase-rest-api==1.8.1
+Flask==2.2.2
+Flask-Caching==2.0.2
+Flask-Ext==0.1
+Flask-Session==0.4.0
+Flask-SQLAlchemy==3.0.3
+future==0.18.3
+gcloud==0.18.3
+google-api-core==2.11.0
+google-auth==2.16.1
+google-cloud-core==2.3.2
+google-cloud-firestore==2.9.1
+google-cloud-storage==2.7.0
+google-crc32c==1.5.0
+google-resumable-media==2.4.1
+googleapis-common-protos==1.58.0
+greenlet==2.0.2
+grpcio==1.51.1
+grpcio-status==1.51.1
+httplib2==0.21.0
+huepy==1.2.1
+idna==3.4
+imageio==2.22.4
+imageio-ffmpeg==0.4.7
+importlib-metadata==4.12.0
+iniconfig==2.0.0
+instabot==0.117.0
+instagrapi==1.16.31
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jwcrypto==1.4.2
+Markdown==3.4.1
+MarkupSafe==2.1.1
+mimetype==0.1.5
+mock==5.0.1
+mod-wsgi==4.9.4
+moviepy==1.0.3
+numpy==1.23.3
+oauth2client==4.1.3
+opencv-python==4.7.0.72
+packaging==21.3
+panel==0.13.1
+param==1.12.2
+piexif==1.1.3
+Pillow==9.2.0
+pkce==1.0.3
+pluggy==1.0.0
+proglog==0.1.10
+proto-plus==1.22.2
+protobuf==4.22.0rc2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pycryptodome==3.17
+pycryptodomex==3.15.0
+pyct==0.4.8
+pydantic==1.10.2
+pygal==3.0.0
+pyparsing==3.0.9
+pypiwin32==223
+Pyrebase4==4.6.0
+PySocks==1.7.1
+pytest==7.2.1
+python-jwt==4.0.0
+pytz==2022.7.1
+pyviz-comms==2.2.1
+pywin32==305
+PyYAML==6.0
+requests==2.28.2
+requests-toolbelt==0.10.1
+responses==0.22.0
+rsa==4.9
+schedule==1.1.0
+six==1.16.0
+SpeechRecognition==3.8.1
+SQLAlchemy==2.0.3
+stegano==0.11.1
+steganography==0.1.1
+toml==0.10.2
+tomli==2.0.1
+tornado==6.2
+tqdm==4.64.1
+types-toml==0.10.8.1
+typing_extensions==4.3.0
+urllib3==1.26.12
+webencodings==0.5.1
+Werkzeug==2.2.2
+win10toast==0.9
+wrapt==1.14.1
+zipp==3.8.1
